# gtnh-updater

./: .gitignore  README.md  pyproject.toml
src/gtnh_updater/: __init__.py  cli.py  state.py  updater.py
tests/: test_updater_config_merge.py
